# html2md-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
src/: __init__.py
src/html2md/: __init__.py  browser.py  cache.py  converter.py  sections.py  server.py  utils.py
tests/: __init__.py
