[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "html2md-mcp"
version = "0.2.0"
description = "MCP server for minimize and converting HTML to Markdown with browser support and authentication"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "sunshad0w" }
]
license = { text = "MIT" }
keywords = [
    "mcp",
    "html",
    "markdown",
    "converter",
    "playwright",
    "browser",
    "web-scraping",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "mcp>=0.9.0",
    "trafilatura>=1.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/sunshad0w/html2md-mcp"
Repository = "https://github.com/sunshad0w/html2md-mcp"
Issues = "https://github.com/sunshad0w/html2md-mcp/issues"
Documentation = "https://github.com/sunshad0w/html2md-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
html2md = "html2md.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/html2md"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
